# networkbot-python

./: .gitignore  LICENSE  README.md  agent-instructions.md  gpt-system-prompt.md  networkbot-sdk.js  networkbot_agent.json  networkbot_sdk.py  openapi.json  pyproject.toml
examples/: autogen_agent.py  langchain_tool.py  quickstart.py
gpt-action/: gpt-system-prompt.md  openapi.json  setup-guide.md
networkbot/: __init__.py  client.py  exceptions.py
